--- a/portfolio.html
+++ b/portfolio.html
@@ -19,14 +19,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
           
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+              <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -85,6 +85,10 @@
       Copyright &copy;
     </div>
   </footer>
+  
 </body>
+
+
+
 
 </html>
